log

Tue 02 Apr 2024 07:05:54 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
b2857d2
Tue 02 Apr 2024 07:25:50 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
6d575a8
Tue 02 Apr 2024 07:26:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
6e47478
Tue 02 Apr 2024 07:36:41 PM UTC: 
 exercises.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   32 |   for (int i = 0 ; i < size ;i++);
      |   ^~~
exercises.c:33:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   33 |   {
      |   ^
exercises.c:34:12: error: ‘i’ undeclared (first use in this function)
   34 |     arrInv[i] = arr[size - i - 1 ];
      |            ^
exercises.c:34:12: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:31:7: error: variable ‘arrInv’ set but not used [-Werror=unused-but-set-variable]
   31 |   int arrInv[size];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
569123b
Tue 02 Apr 2024 07:42:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: variable ‘arrInv’ set but not used [-Werror=unused-but-set-variable]
   31 |   int arrInv[size];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
03b6c56
Tue 02 Apr 2024 07:42:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: variable ‘arrInv’ set but not used [-Werror=unused-but-set-variable]
   31 |   int arrInv[size];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
1f7b154
Tue 02 Apr 2024 07:43:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:3: error: ‘arrInvint’ undeclared (first use in this function)
   31 |   arrInvint [size];
      |   ^~~~~~~~~
exercises.c:31:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:34:5: error: ‘arrInv’ undeclared (first use in this function)
   34 |     arrInv[i] = arr[size - i];
      |     ^~~~~~
Compilation failed
2c3c3aa
